XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????


Version 5.5.3, released 2007-06-26
----------------------------------
SVN version: 10665

- Protect Base57 encoding and decoding against possibly inccorrect results 
  if EG(precision) is too small
  (friebe)
- Make socket_select() work properly when interrupted by signals
  (sperber)
- Fixed exception handler in SAPI soap.service
  (kiesel)
- Implemented sql function and projections for postgreSQL and sqllite
  (wagner)

Version 5.5.2, released 2007-06-15
----------------------------------
SVN version: 10632

- Fixed DomXSLProcessor's error handling only to throw exceptions for
  LIBXML_ERR_FATAL level
  (friebe, gellweiler)
- Improved performance of img.filter.ConvolveFilter - use builtin
  imageconvolution() function if available
- Fixed bug in io.sys.IPCQueue::removeQueue() which lead to the queue 
  not being removed
  (friebe)
- Implemented RFC #0130 - util.HashmapIterator returns values instead of keys
  (friebe)
- Made TransformerException's message more verbose in DomXSLProcessor 
  (friebe, gellweiler, clang)
- Implemented RFC #0096 - DataSet classes will be enhanced to know about 
  foreign keys (wagner)
- Implemented RFC #0123 - aggregate or cut down the query's resultset
  (wagner)
- Implemented RFC #0124 - SQL standard functions
  (wagner)
- Implemented RFC #0129 - join over multiple tables
  (wagner)

Version 5.5.1, released 2007-06-01
----------------------------------
SVN version: 10476

- Fixed bug #9 - peer.mail.InternetAddress not correctly encoding addresses
  (friebe)
- Fixed bug #8 - HttpRequest ignores QUERY_STRING
  (friebe)
- Fixed bug #14 - create empty Folder returns TRUE
  (friebe)
- Fixed bug #20 - util.collections.DJBX33AHashImplementation broken on 
  64 bit systems (resolved by using MD5HashImplementation)
  (friebe)