@@ -6,6 +6,8 @@ Version ?.?.?, released ????-??-??
 ----------------------------------
 SVN version: ?????
 
+- make util.cmd.Runner output errors and usage to STDERR
+  (kiesel)
 
 Version 5.5.3, released 2007-06-26
 ----------------------------------
